<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg2"
    tools:context="com.example.asus.kurangcerdas.tentang">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="TENTANG DINAS PMD, P3A, dan PPKB"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="25sp"
    android:textStyle="bold"
    android:layout_marginTop="8dp"
    android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pmd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorpink"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VISI"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/visi"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorpink"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MISI"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/misi"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorpink"
        android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
