<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg2"
    tools:context="com.example.asus.kurangcerdas.daftar">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/logodaftar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logodaftar"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_no_urut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nomer"
                    android:textAlignment="center"
                    android:textColor="@color/black_semi_transparent"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukan_nik"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_nik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukan_nama"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukan_tempat"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_tempat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="Tanggal Lahir : "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:text="Tanggal"
                    android:textColor="@color/colorpink"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Jenis Kelamin : "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/edt_jenkel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/laki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Laki - Laki"
                        android:textColor="@color/colorpink" />

                    <RadioButton
                        android:id="@+id/perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Perempuan"
                        android:textColor="@color/colorpink" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukan_alamat"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/masukan_rt"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_rt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/masukan_desa"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_desa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/masukan_kec"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_kec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/masukan_kab"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edt_kab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Agama : "
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/edt_agama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/Agama"
                    android:padding="2dp"
                    android:textColor="#fd1160" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukan_pass"
                    android:textColorHint="@color/colorPrimaryDark">

                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/edt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorpink"
                        android:textSize="15sp"
                        app:drawable_hide="@drawable/ic_eye_show"
                        app:drawable_show="@drawable/ic_eye_hide"
                        app:tint_color="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txt_image"
                    android:layout_width="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:hint="@string/ktp"
                    android:inputType="textCapCharacters"
                    android:padding="@dimen/appbar_padding_top" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:padding="@dimen/text_margin" />

                <Button
                    android:id="@+id/btn_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="daftar" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buttonLogin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="18sp"
                    android:layout_marginBottom="15dp"
                    android:text="Sudah Punya Akun..? Silahkan Login"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>